djangobb_forum/static/djangobb_forum/themes/scratch_default_theme_copy/style.css
/****************************************************************/
/* 1. IMPORTED STYLESHEETS */
/****************************************************************/




/****************************************************************/
/* 2. TEXT SETTINGS */
/****************************************************************/

/* 2.1 This sets the default Font Group */

.djangobb, .djangobb INPUT, .djangobb SELECT, .djangobb TEXTAREA, .djangobb OPTGROUP {
  FONT-FAMILY: Verdana, Arial, Helvetica, sans-serif
}

.djangobb {FONT-SIZE: 11px; LINE-HEIGHT: normal}

/* IEWin Font Size only - to allow IEWin to zoom. Do not remove comments \*/
* HTML .djangobb {FONT-SIZE: 68.75%}
/* End IE Win Font Size */

/* Set font size for tables because IE requires it */
.djangobb TABLE, .djangobb INPUT, .djangobb SELECT, .djangobb OPTGROUP, .djangobb TEXTAREA, DIV.postmsg P.postedit {FONT-SIZE: 1em}

/* 2.2 Set the font-size for preformatted text i.e in code boxes */

.djangobb PRE {FONT-FAMILY: monaco, "Bitstream Vera Sans Mono", "Courier New", courier, monospace}

/* 2.3 Font size for headers */

.djangobb H2, .djangobb H4 {}
.djangobb H3 {FONT-SIZE: 1.1em}

/* 2.4 Larger text for particular items */
DIV.postmsg P {LINE-HEIGHT: 1.4}
DIV.postleft DT {FONT-SIZE: 1.1em}
.djangobb PRE {FONT-SIZE: 1.2em}

/* 2.5 Bold text */

DIV.postleft DT, DIV.postmsg H4, TD.tcl H3, DIV.forminfo H3, P.postlink, DIV.linkst LI,
DIV.linksb LI, DIV.postlinksb LI, .blockmenu LI, #brdtitle H1, .djangobb SPAN.warntext, .djangobb P.warntext {FONT-WEIGHT: bold}

/****************************************************************/
/* 3. LINKS */
/****************************************************************/

/* 3.1 Remove underlining for main menu, post header links, post links and vertical menus */

/* #brdmenu A:link, #brdmenu A:visited, .blockpost DT A:link, .blockpost DT A:visited, .blockpost H2 A:link, */
/* .blockpost H2 A:visited, .postlink A:link, .postlink A:visited, .postfootright A:link, .postfootright A:visited, */
/* .blockmenu A:link, .blockmenu A:visited { */
/*   TEXT-DECORATION: none */
/* } */

/* 3.2 Underline on hover for links in headers and main menu */

#brdmenu .blockpost H2 A:hover {font-weight: bold;TEXT-DECORATION: none}
#brdmenu A:hover {/*color: #FFFFFF; text-decoration:underline;*/}

/****************************************************************/
/* 4. BORDER WIDTH AND STYLE */
/****************************************************************/

/* 4.1 By default borders are 1px solid */

DIV.box, .djangobb TD, .djangobb TH, .djangobb BLOCKQUOTE, DIV.code, DIV.forminfo, DIV.blockpost LABEL {
  BORDER-STYLE: solid;
  BORDER-WIDTH: 1px
}

.djangobb TH {border-top: 0px}

/* 4.2 Special settings for the board header. */

#brdheader DIV.box {BORDER-TOP-WIDTH: 1px}

/* 4.3 Borders for table cells */

.djangobb TD, .djangobb TH {
  BORDER-BOTTOM: none;
  BORDER-RIGHT: none
}

.djangobb .tcl {BORDER-LEFT: none}

/* 4.4 Special setting for fieldsets to preserve IE defaults */

DIV>FIELDSET {
  BORDER-STYLE: solid;
  BORDER-WIDTH: 1px
}

/****************************************************************/
/* 5. VERTICAL AND PAGE SPACING */
/****************************************************************/

/* 5.1 Page margins */

/* HTML, BODY {MARGIN: 0;PADDING: 0; text-align: center;} */
/* #djangobbwrap {margin:10px 10px} */

/* 5.2 Creates vertical space between main board elements (Margins) */

DIV.blocktable, DIV.block, DIV.blockform, DIV.block2col, #postreview {MARGIN-BOTTOM: 10px}
#djangobbindex DIV.blocktable, DIV.blockpost {MARGIN-BOTTOM: 10px}
DIV.block2col DIV.blockform, DIV.block2col DIV.block {MARGIN-BOTTOM: 0px}

/* 5.3 Remove space above breadcrumbs, postlinks and pagelinks with a negative top margin */

DIV.linkst, DIV.linksb {MARGIN-TOP: -8px}
DIV.postlinksb {MARGIN-TOP: -4px}

/* 5.4 Put a 12px gap above the board information box in index because the category tables only
have a 6px space beneath them */

#brdstats {MARGIN-TOP: 10px}

/****************************************************************/
/* 6. SPACING AROUND CONTENT */
/****************************************************************/

/* 6.1 Default padding for main items */

DIV.block DIV.inbox,
DIV.blockmenu DIV.inbox,
.djangobb P,
.djangobb UL,
.djangobb DL,
DIV.blockmenu LI,
.djangobb LABEL,
#announce DIV.inbox DIV {PADDING: 3px 3px 3px 0}
.djangobb H2 {margin:5px 0; PADDING: 4px 6px 4px 0}

/* 6.2 Special spacing for various elements */

.djangobb H1 {PADDING: 3px 0px 0px 0px}
#brdtitle P {PADDING-TOP: 0px}
DIV.linkst {PADDING: 8px 6px 3px 6px}
DIV.linksb, DIV.postlinksb {PADDING: 3px 6px 8px 6px}
#brdwelcome, #brdfooter DL A, DIV.blockmenu LI, DIV.rbox INPUT  {LINE-HEIGHT: 1.4em}
#viewprofile DT, #viewprofile DD {PADDING: 0 3px; LINE-HEIGHT: 2em}

/* 6.4 Create some horizontal spacing for various elements */

#brdmenu LI, DIV.rbox INPUT, DIV.blockform P INPUT  {MARGIN-RIGHT: 7px}

/****************************************************************/
/* 7. SPACING FOR TABLES */
/****************************************************************/

.djangobb TH, .djangobb TD {PADDING: 4px 6px}
.djangobb TD P {PADDING: 5px 0 0 0}

/****************************************************************/
/* 8. SPACING FOR POSTS */
/****************************************************************/

/* 8.1 Padding around left and right columns in viewtopic */

/* DIV.postleft DL, */
DIV.postright {PADDING: 6px}

/* 8.2 Extra spacing for poster contact details and avatar */

DD.usercontacts, DD.postavatar {MARGIN-TOP: 5px}
DD.postavatar {MARGIN-BOTTOM: 5px}

/* 8.3 Extra top spacing for signatures and edited by */

DIV.postsignature, DIV.postmsg P.postedit {PADDING-TOP: 15px}

/* 8.4 Spacing for code and quote boxes */

DIV.postmsg H4 {MARGIN-BOTTOM: 10px}
.djangobb BLOCKQUOTE, DIV.code {MARGIN: 5px 15px 15px 15px; PADDING: 8px}

/* 8.5 Padding for the action links and online indicator in viewtopic */

DIV.postfootleft P, DIV.postfootright UL, DIV.postfootright DIV {PADDING: 10px 6px 5px 20px}

/* 8.6 This is the input on moderators multi-delete view */

DIV.blockpost INPUT, DIV.blockpost LABEL {
  PADDING: 3px;
  DISPLAY: inline
}

P.multidelete {
  PADDING-TOP: 15px;
  PADDING-BOTTOM: 5px
}

/* 8.7 Make sure paragraphs in posts don't get any padding */

DIV.postmsg P {PADDING: 0}

/* 8.8 Avoid inheriting margin from main box.css */
DIV.box {margin-bottom:0px;}

/****************************************************************/
/* 9. SPECIAL SPACING FOR FORMS */
/****************************************************************/

/* 9.1 Padding around fieldsets */

DIV.blockform FORM, DIV.fakeform {PADDING: 20px 20px 15px 20px}
DIV.inform {PADDING-BOTTOM: 12px}

/* 9.2 Padding inside fieldsets */

.djangobb FIELDSET {PADDING: 0px 12px 0px 12px}
DIV.infldset {PADDING: 9px 0px 12px 0}
.djangobb LEGEND {PADDING: 2px 6px}

/* 9.3 The information box at the top of the registration form and elsewhere */

DIV.forminfo {
  MARGIN-BOTTOM: 12px;
  PADDING: 9px 10px
}

/* 9.4 BBCode help links in post forms */

UL.bblinks LI {PADDING-RIGHT: 20px}

UL.bblinks {PADDING-BOTTOM: 10px; PADDING-LEFT: 4px}

/* 9.5 Horizontal positioning for the submit button on forms */

DIV.blockform P INPUT {MARGIN-LEFT: 12px}

/****************************************************************/
/* 10. POST STATUS INDICATORS */
/****************************************************************/

/* 10.1 These are the post status indicators which appear at the left of some tables. 
.inew = new posts, .iredirect = redirect forums, .iclosed = closed topics and
.isticky = sticky topics. By default only .inew is different from the default.*/

DIV.forumicon,DIV.inew, DIV.sticky, DIV.closed {
  FLOAT: left;
  MARGIN-TOP: 0.8em;
  MARGIN-right: 0.4em;
  DISPLAY: block;
/*  BORDER-WIDTH: 0.6em 0.6em 0.6em 0.6em;
  BORDER-STYLE: solid*/
  HEIGHT: 16px;
  WIDTH: 16px;
}

.djangobb .tcl img.rss{margin-top:.8em;}


DIV.searchposts DIV.forumicon {MARGIN-LEFT: 0}

/* 10.2 Class .tclcon is a div inside the first column of tables with post indicators. The
margin creates space for the post status indicator */

TD DIV.tclcon {MARGIN-LEFT: 2.3em}

/****************************************************************/
/* 11. EXTRAS */
/****************************************************************/

#brdmenu {height:20px;padding-top:1px;padding-left:8px}
#djangobbwrap {
  width: auto;
/*   margin-left: 25px; */
/*   margin-right: 25px; */
  text-align: left;
  background-repeat: repeat-y;
}
.djangobb {
  background-repeat: no-repeat;
}


#brdfooter {
  width: auto;
  margin-bottom: 10px;
  background-repeat:  no-repeat;
  background-position: bottom left;
}

/*make listed topic H3s inline*/
.box-content .tclcon > H3 {display:inline}

/*when listing last post for each topic in the list, display the time and name inline */
#djangobbindex td.tcr span.byuser {
  DISPLAY: inline;
}
/* margin for all box headers to mimic margin on the rest of the site*/

.djangobb .box h2,
#brdheader .box .box-content,
#msg .box .box-content,
#brdfooter .box .box-content,
#brdstats .box .box-content,
.blocktable .box .box-content .tcl,
.box .postleft > dl > *,
.inbox .pagelink .pagination
.postlinksb .subscribelink {
  padding-left:20px;
}



/*Remove the fieldset border from static/css/forms.css on djangobb forms*/
/* .djangobb div > fieldset {border:0} */

/* change the box colors on individual posts */
.djangobb div.blockpost div.box {background-color: #28A5DA; border-color: #91C4DA;}
.djangobb div.blockpost h2,
.djangobb div.blockpost h2 span.conr,
.djangobb div.blockpost h2 a,
.djangobb div.blockpost h2 a:link,
.djangobb div.blockpost h2 a:active,
.djangobb div.blockpost h2 a:hover,
.djangobb div.blockpost h2 a:visited {background-color: transparent; color:#fff; text-shadow:none; font-size:1em}

td.tcl H3.topic_isread{FONT-WEIGHT:normal}

.djangobb input.small {margin:1em}

/* distinguish moderator only features from others - for testing purposes, and maybe beyond? */
.moderator-only {background-color:#FFB}
.admin-only {background-color:#FC0}


/* Remove the MARKIT UP! image from the markit up editor */
textarea.markItUpEditor {
		/*background-image: none;  remove the background pic */
		background-position-x: -35px; /* see if we can keep the gradient background instead */
		padding-left:5px; /* without the image, we can take the left side padding out */
		width:673px; /*and extend the editor to use the extra space */
}

